# siri

./: .gitignore  DOC.md  README.md  download-models.sh
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sherpa_onnx_jni.c
ios/: download-frameworks.sh  generate_icon.py
ios/SiriApp/: AppDelegate.swift  ContentView.swift  SiriApp-Bridging-Header.h  SiriAppApp.swift
ios/SiriApp.xcodeproj/: project.pbxproj
ios/SiriApp/ASR/: SherpaAsrEngine.swift
ios/SiriApp/Audio/: AudioPlayer.swift  AudioRecorder.swift  AudioSessionManager.swift  WakeWordEngine.swift  WakeWordManager.swift
ios/SiriApp/Chat/: ChatSession.swift  LlmClient.swift
ios/SiriApp/Config/: ConfigRepository.swift  ConfigViewModel.swift
ios/SiriApp/Helpers/: Bzip2Helper.h  DesignTokens.swift  Extensions.swift  KeychainHelper.swift  ModelManager.swift  TarBz2Extractor.swift
ios/SiriApp/Models/: AppState.swift  ChatMessage.swift  LlmConfig.swift  LlmPreset.swift
ios/SiriApp/Rag/: EmbeddingClient.swift  HybridSearcher.swift  KeywordSearcher.swift  VectorStore.swift
ios/SiriApp/TTS/: SherpaTtsEngine.swift  TextNormalizer.swift
ios/SiriApp/ViewModels/: ContentViewModel.swift  MainViewModel.swift  RagSearchViewModel.swift
ios/SiriApp/Views/: MainScreen.swift  ModelSetupScreen.swift  RagSearchView.swift  (+2 more)
script/: build_md_vectordb.py  build_rag_assets.py  test_bailian_search.py  test_web_search.py
(+65 files in other folders)
